day-17/netpol/01-bloqueia-ingress-todo.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata: 
  name: default-deny-all 
  namespace: giropops 
spec:
  podSelector: {} 
  polictyTypes:
  - Ingress 
  - Egress
