day-17/netpol/03-libera-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata:
  name: allow-ingress 
  namespace: giropops 
spec:
  podSelector: {}
  policyTypes:
  - Ingress 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx 
      ports: 
      - protocol: TCP 
        port: 5000
