day-17/netpol/04-ajusta-egress.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata:
  name: allow-dns 
  namespace: giropops 
spec: 
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress 
 egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system 
      podSelector: 
        matchLabels:
          k8s-app: kube-dns 
      ports:
      - protocol: UDP 
        port: 53
