day-17/netpol/05-ajusta-egress-dentro-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata: 
  name: allow-app-to-redis 
  namespace: giropops 
spec:
  podSelector:
    matchLabels: {} 
  policyTypes:
  - Egress 
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: giropops 
      podSelector: 
        matchLabels:
          app: redis
