day-17/netpol/06-bloqueando-redes.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata:
  name: ip-block 
  namespace: giropops 
spec:
  podSelector: {} 
  policyTypes: 
  - Ingress: 
  ingress:
  - from:
    - ipblock:
        cidr: 172.18.0.0/16
        except:
        - 172.18.0.111/32
