day-17/netpol/primeira-network-policy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata:
  name: primeira-netpol 
  namespace: giropops 
spec:
  podSelector:
    matchLabels:
      app: redis # Vale para qualquer um que quiser se comunicar com o redis 
  ingress:
  - from:
      - podSelector: {}
