day-17/netpol/segunda-network-policy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata:
  name: segunda-policy 
  namespace: giropops  
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: giropops
